fixed spacing

--- a/src/templates/definitionTemp.module.css
+++ b/src/templates/definitionTemp.module.css
@@ -3,7 +3,11 @@
 }
 
 .title {
-    margin-top: 20px;
+    padding: 15px 0;
+}
+
+.title h1 {
+    font-size: 40px;
 }
 
 .sectionHead {
@@ -11,15 +15,17 @@
     margin-bottom: 5px;
 }
 
-.content h3, .content h4, .content h5, .content h6 {
+.content h2, .content h3, .content h4, .content h5, .content h6 {
     margin-top: 10px;
+    font-weight: 200;
+    margin-bottom: 0px;
 }
 
 .content p{
-    margin-top: 10px;
-    padding: 10px 0px;
+    padding: 2px 0px;
     font-size: 1.1rem;
     line-height: 1.5;
+    margin-bottom: 10px;
 }
 
 @media only screen and (min-width: 320px)  { .definitionContainer{ padding: 0px; } }
